# Kryptos

./: .gitignore  CHANGELOG.md  DESIGN_SYSTEM.md  Makefile  README.md  SECURITY.md  THREAT_MODEL.md  index.html  package.json  push.ps1  tailwind.config.js
.github/workflows/: ci.yml  codeql.yml
install/: install.sh  kryptos  kryptos-launch.sh  kryptos.desktop  kryptos.service  uninstall.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  deny.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/crypto/: keys.rs
src-tauri/src/daemon/: config.rs  engine.rs  http_api.rs  ipc.rs  mod.rs
src-tauri/src/firewall/: mod.rs  nftables.rs  panic.rs
src-tauri/src/network/: classifier.rs  dns.rs  mac.rs  mod.rs  routing.rs
src-tauri/src/security/: verify.rs
src-tauri/src/utils/: command.rs
src/components/: Layout.tsx
src/lib/: daemon-context.tsx  ipc.ts
src/pages/: Dashboard.tsx  Firewall.tsx  Network.tsx  Services.tsx  Settings.tsx
