[package]
name = "endpoint-privacy-suite"
version = "0.1.0"
description = "High-performance Endpoint Privacy Suite for Kali Linux"
edition = "2021"
default-run = "endpoint-privacy-suite"

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
libc = "0.2"
nix = { version = "0.29", features = ["net", "fs", "process", "signal", "user"] }
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
lru = "0.12"
tokio-stream = { version = "0.1", features = ["fs"] }
sha2 = "0.10"
hex = "0.4"
ureq = { version = "2", features = ["native-certs"] }
tauri = { version = "2", optional = true, default-features = false, features = [] }

[build-dependencies]
tauri-build = { version = "2", optional = true, default-features = false, features = [] }

[features]
desktop = ["tauri", "tauri-build"]
